--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -307,64 +307,10 @@
 		</div>
 	</div>
 
+	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
+	
 	<script type="text/javascript">
-		var annotationEditor = new Quill('#annotationEditor', {
-			modules : {
-				syntax : true,
-				toolbar : [ [ {
-					'font' : []
-				} ], [ {
-					'size' : [ 'small', false, 'large', 'huge' ]
-				} ], // custom dropdown
-				[ 'bold', 'italic', 'underline', 'strike' ], // toggled buttons
-				[ {
-					'header' : 1
-				}, {
-					'header' : 2
-				} ], // custom button values
-				[ {
-					'header' : [ 1, 2, 3, 4, 5, 6, false ]
-				} ], [ {
-					'color' : []
-				}, {
-					'background' : []
-				} ], // dropdown with defaults from theme
-				[ {
-					'align' : ''
-				}, {
-					'align' : 'center'
-				}, {
-					'align' : 'right'
-				}, {
-					'align' : 'justify'
-				} ], [ {
-					'script' : 'sub'
-				}, {
-					'script' : 'super'
-				} ], // superscript/subscript
-				[ {
-					'list' : 'ordered'
-				}, {
-					'list' : 'bullet'
-				} ], [ {
-					'indent' : '-1'
-				}, {
-					'indent' : '+1'
-				} ], // outdent/indent
-				[ {
-					'direction' : 'rtl'
-				} ], // text direction
-				[ 'blockquote', 'code-block' ],
-						[ 'link', 'image', 'video', 'formula' ], [ 'clean' ] // remove formatting button
-				],
-				history : {
-					delay : 2000,
-					maxStack : 500,
-					userOnly : true
-				}
-			},
-			theme : 'snow'
-		});
+		var annotationEditor = new Quill('#annotationEditor', EditorOptions.TOPIC);
 
 		function openNav() {
 			if ($('#annotationSideNav').hasClass('active')) {
@@ -419,91 +365,11 @@
 	<script type="text/javascript" th:inline="javascript">
 		let questions = /*[[${questions}]]*/null;
 
-		hljs.configure({
-			tabReplace : '    ',
-			languages : [ 'java' ]
-		});
-		hljs.highlightAll();
+		var contentEditor = new Quill('#contentEditor', EditorOptions.READ_ONLY);
 
-		var contentEditor = new Quill('#contentEditor', {
-			modules : {
-				syntax : true,
-				toolbar : []
-			},
-			theme : 'snow'
-		});
-		contentEditor.enable(false);
-		$('#contentEditor').closest('.ql-toolbar').hide();
-		$('#contentCard').find('.ql-toolbar').first().remove();
+		var questionEditor = new Quill('#question', EditorOptions.READ_ONLY);
 
-		var questionEditor = new Quill('#question', {
-			modules : {
-				syntax : true,
-				toolbar : []
-			},
-			theme : 'snow'
-		});
-		questionEditor.enable(false);
-		$('#questionContainer').find('.ql-toolbar').first().remove();
-
-		var newQuestionEditor = new Quill('#newQuestionEditor', {
-			modules : {
-				syntax : true,
-				toolbar : [ [ {
-					'font' : []
-				} ], [ {
-					'size' : [ 'small', false, 'large', 'huge' ]
-				} ], // custom dropdown
-				[ 'bold', 'italic', 'underline', 'strike' ], // toggled buttons
-				[ {
-					'header' : 1
-				}, {
-					'header' : 2
-				} ], // custom button values
-				[ {
-					'header' : [ 1, 2, 3, 4, 5, 6, false ]
-				} ], [ {
-					'color' : []
-				}, {
-					'background' : []
-				} ], // dropdown with defaults from theme
-				[ {
-					'align' : ''
-				}, {
-					'align' : 'center'
-				}, {
-					'align' : 'right'
-				}, {
-					'align' : 'justify'
-				} ], [ {
-					'script' : 'sub'
-				}, {
-					'script' : 'super'
-				} ], // superscript/subscript
-				[ {
-					'list' : 'ordered'
-				}, {
-					'list' : 'bullet'
-				} ], [ {
-					'indent' : '-1'
-				}, {
-					'indent' : '+1'
-				} ], // outdent/indent
-				[ {
-					'direction' : 'rtl'
-				} ], // text direction
-				[ 'blockquote', 'code-block' ],
-						[ 'link', 'image', 'video', 'formula' ], [ 'clean' ] // remove formatting button
-				],
-				history : {
-					delay : 2000,
-					maxStack : 500,
-					userOnly : true
-				}
-			},
-			theme : 'snow'
-		});
-
+		var newQuestionEditor = new Quill('#newQuestionEditor', EditorOptions.QUESTION);
 		$('#newQuestionForm').submit(function(event) {
 			$('#description').val(newQuestionEditor.root.innerHTML);
 		});
