--- a/src/main/resources/templates/games/playing.html
+++ b/src/main/resources/templates/games/playing.html
@@ -89,6 +89,7 @@
 
 	</div>
 
+	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
 	<script type="text/javascript" th:src="@{/js/game/playing.js}"></script>
 </body>
 </html>
