--- a/src/main/resources/templates/admin/topic-edit.html
+++ b/src/main/resources/templates/admin/topic-edit.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-	#editor-container {
-	  height: 350px;
-	}
+#editor-container {
+	height: 350px;
+}
 </style>
 </head>
 <body>
@@ -134,40 +134,10 @@
 
 	</div>
 
-	<script type="text/javascript">
-		hljs.configure({
-			tabReplace: '    ',
-			languages : [ 'java' ]
-		});
-		hljs.highlightAll();
+	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
 
-		var editor = new Quill('#editor-container', {
-			modules : {
-				syntax : true,
-				toolbar : [ 
-					[ { 'font' : [] } ],
-					[ { 'size' : [ 'small', false, 'large', 'huge' ] } ], // custom dropdown
-					[ 'bold', 'italic', 'underline', 'strike' ], // toggled buttons
-					[ {	'header' : 1 }, { 'header' : 2 } ], // custom button values
-					[ { 'header' : [ 1, 2, 3, 4, 5, 6, false ] } ], 
-					[ { 'color' : [] }, { 'background' : [] } ], // dropdown with defaults from theme
-					[ { 'align': ''}, { 'align': 'center' }, { 'align': 'right' }, { 'align': 'justify' } ], 
-					[ { 'script' : 'sub' }, { 'script' : 'super' } ], // superscript/subscript
-					[ { 'list' : 'ordered' }, { 'list' : 'bullet' } ], 
-					[ { 'indent' : '-1' }, { 'indent' : '+1' } ], // outdent/indent
-					[ { 'direction' : 'rtl' } ], // text direction
-					[ 'blockquote', 'code-block' ],
-					[ 'link', 'image', 'video', 'formula' ], 
-					[ 'clean' ] // remove formatting button
-				],
-				history: {
-			      delay: 2000,
-			      maxStack: 500,
-			      userOnly: true
-			    }
-			},
-			theme : 'snow'
-		});
+	<script type="text/javascript">
+		var editor = new Quill('#editor-container', EditorOptions.TOPIC);
 
 		$('form').submit(function(event) {
 			$('#bodyHtml').val(editor.root.innerHTML);
